# lib/db/src/schema/index.ts
@@ -59,4 +59,5 @@ export * from "./user-library";
 export * from "./resonadores";
 export * from "./account-deletions";
 export * from "./search-trend-buckets";
+export * from "./sleep-carousel-order";
 
